--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">AnaLogByAndroid</string>
+
+    <string name="welcom_text">加载中...</string>
+    <string name="login_phone_hint">手机号</string>
+    <string name="login_verify_hint">验证码</string>
+    <string name="login_psd_hint">密码</string>
+    <string name="login">登录</string>
 </resources>
