注册登录接口；

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="login_verify_hint">验证码</string>
     <string name="login_psd_hint">密码</string>
     <string name="login">登录</string>
+    <string name="toast_fail">获取数据失败</string>
 </resources>
