--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
     <string name="login">登录</string>
     <string name="toast_fail">获取数据失败</string>
     <string name="login_out">退出登录</string>
+    <string name="paihang">排行榜</string>
+    <string name="my_info">个人信息</string>
+    <string name="exit">退出</string>
 </resources>
